	  o  list_to_jid/1 and binary_to_jid/1 are removed.
	At the same time, simplify exception thrown.  Remove support for bare
	JID parsing. Remove make_bare_jid/{1,2} because make_jid/{1,2} provide
	the same thing.

	* src/compat/jlib.erl, src/core/exmpp_stanza.erl,
	src/client/exmpp_client_binding.erl: Update to use
	exmpp_jid:parse_jid/1.

	* testsuite/jid.erl: The test works again.

2009-01-13  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_xml.erl: Use exmpp_known_elems:elem_as_list/1 in
	two places where atom_to_list/1 was still used.

	* src/core/exmpp_stanza.erl, src/core/exmpp_message.erl: Table to
	convert from type(atom) to the corresponding binary value (instead of
	using atom_to_list/1 and list_to_binary/1.

2009-01-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/xmpp_nss.h.awk, c_src/xmpp_nss.h.js, c_src/xmpp_names.h.awk,
	c_src/xmpp_names.h.js, c_src/xmpp_attrs.h.awk, c_src/xmpp_attrs.h.js:
	Remove unused files.

	* include/exmpp_xmpp.hrl, src/core/exmpp_iq.erl,
	src/core/exmpp_message.erl: Style.

	* src/core/exmpp_stream.erl: Update documentation.
	(set_version_in_attrs/2, set_id_in_attrs/2): Treat the empty binary
	the same way the empty string is treated.
	(parse_version/1): Accept string() again.

	* src/core/exmpp_stringprep.erl (control_reuse_arg/2): Don't treat
	errors from control specially. Reformulate a comment more positively.
	Style.

	* src/core/exmpp_xml.erl: Add documentation to new functions. Style.

	* c_src/exmpp_xml.c (make_attribute): Fix the case where the
	attribute's value length isn't provided.

	* src/core/exmpp_jid.erl: Update documentation. Style.
	(bare_jid_to_jid/2): Add support for an automatically generated random
	resource.

	* testsuite/jid.erl: Restore the too_long_identifiers_test_ test
	although it may not work for now (I'm unable to test right now).
	Style.

	* include/exmpp_jid.hrl: Remove this empty header. A new one may added
	later as an internal header.
